--- a/app/src/main/res/layout/fragment_other.xml
+++ b/app/src/main/res/layout/fragment_other.xml
@@ -4,73 +4,119 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:context=".ui.addpackage.OtherFragment">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollview"
+        android:scrollbars="vertical">
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/txtSleepNativeMethod"
-            android:hint="native函数名称,反调试手段,调用前睡眠等待附加调试"
-            android:minHeight="45dp"
-            style="@style/FormMargin"
-            android:textSize="18sp" />
-        <EditText
-            android:id="@+id/txtSmaliTrace"
-            style="@style/FormMargin"
-            android:gravity="top|left"
-            android:hint="java函数名称,smali指令trace"
-            android:minHeight="45dp"
-            android:textSize="18sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
             <EditText
-                android:id="@+id/txtJsPath"
-                android:hint="持久化frida的js文件路径"
+                android:id="@+id/txtSleepNativeMethod"
+                android:hint="native函数名称,反调试手段,调用前睡眠等待附加调试"
                 android:minHeight="45dp"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1.7"
+                style="@style/FormMargin"
+                android:textSize="18sp" />
+            <EditText
+                android:id="@+id/txtSmaliTrace"
+                style="@style/FormMargin"
+                android:gravity="top|left"
+                android:hint="java函数名称,smali指令trace"
+                android:minHeight="45dp"
                 android:textSize="18sp" />
 
-            <EditText
-                android:id="@+id/txtPort"
-                android:text="27042"
-                android:minHeight="45dp"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:textSize="18sp" />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-            <Button
-                android:id="@+id/btnListen"
-                android:text="监听"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1.0"
-                android:layout_marginLeft="5dp"/>
-            <Button
-                android:id="@+id/btnListenWait"
-                android:text="监听并阻塞"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1.0"
-                android:layout_marginLeft="5dp"/>
-            <Button
-                android:id="@+id/btnSelectFridaJs"
-                android:text="选择脚本"
-                android:layout_height="wrap_content"
-                android:layout_width="0dp"
-                android:layout_weight="1.0"
-                android:layout_marginLeft="5dp"/>
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/txtGadgetPath"
+                    android:hint="gadget的路径,默认15.1"
+                    android:minHeight="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.7"
+                    android:textSize="18sp" />
+                <Button
+                    android:id="@+id/btnSelectGadget"
+                    android:text="gadget"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.8"
+                    android:layout_marginLeft="5dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/txtSoPath"
+                    android:hint="注入so的路径"
+                    android:minHeight="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.7"
+                    android:textSize="18sp" />
+                <Button
+                    android:id="@+id/btnSelectSo"
+                    android:text="选择so"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.8"
+                    android:layout_marginLeft="5dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/txtJsPath"
+                    android:hint="frida持久化脚本路径"
+                    android:minHeight="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.7"
+                    android:textSize="18sp" />
+
+                <EditText
+                    android:id="@+id/txtPort"
+                    android:text="27042"
+                    android:minHeight="45dp"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="0.5"
+                    android:textSize="18sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <Button
+                    android:id="@+id/btnListen"
+                    android:text="监听"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.0"
+                    android:layout_marginLeft="5dp"/>
+                <Button
+                    android:id="@+id/btnListenWait"
+                    android:text="监听并阻塞"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.0"
+                    android:layout_marginLeft="5dp"/>
+                <Button
+                    android:id="@+id/btnSelectFridaJs"
+                    android:text="选择脚本"
+                    android:layout_height="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1.0"
+                    android:layout_marginLeft="5dp"/>
+            </LinearLayout>
     </LinearLayout>
-
+    </ScrollView>
 </FrameLayout>
