添加阻塞主动调用

--- a/app/src/main/res/layout/fragment_dump.xml
+++ b/app/src/main/res/layout/fragment_dump.xml
@@ -23,6 +23,10 @@
                     android:id="@+id/swDeep"
                     style="@style/FormMargin"
                     android:text="更深调用链"/>
+                <Switch
+                    android:id="@+id/swBlockCall"
+                    style="@style/FormMargin"
+                    android:text="阻塞的主动调用"/>
                 <EditText
                     android:id="@+id/txtWhiteClass"
                     style="@style/FormMargin"
